syntax = "proto3";

package order;

option go_package = "./proto";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrderByID (GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (OrderResponse);
  rpc ListUserOrders (ListOrdersRequest) returns (ListOrdersResponse);
  rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse);
  rpc TrackOrder (TrackOrderRequest) returns (TrackOrderResponse);
}

// Existing messages
message CreateOrderRequest {
  int32 user_id = 1;
  repeated OrderItem items = 2;
}

message OrderItem {
  int32 product_id = 1;
  int32 quantity = 2;
}

message GetOrderRequest {
  int32 order_id = 1;
}

message UpdateOrderStatusRequest {
  int32 order_id = 1;
  string status = 2; // e.g., "pending", "shipped"
}

message ListOrdersRequest {
  int32 user_id = 1;
}

message OrderResponse {
  int32 order_id = 1;
  int32 user_id = 2;
  repeated OrderItem items = 3;
  string status = 4;
  double total = 5;
}

message ListOrdersResponse {
  repeated OrderResponse orders = 1;
}

// New messages
message CancelOrderRequest {
  int32 order_id = 1;
}

message CancelOrderResponse {
  string message = 1; // e.g., "Order cancelled successfully"
}

message TrackOrderRequest {
  int32 order_id = 1;
}

message TrackOrderResponse {
  string current_status = 1;
  string estimated_delivery = 2; // could be a date string or timestamp
}
